--- a/src/package.json
+++ b/src/package.json
@@ -7,13 +7,20 @@
     "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/downloadjs": "^1.4.2",
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0",
     "babel-loader": "^8.2.2",
+    "downloadjs": "^1.4.7",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "webpack": "^5.56.0",
