--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
     "wp": "webpack -w"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.14.5",
