--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "wp": "webpack -w"
+    "wp": "webpack -w",
+    "sass": "sass \"./css/netdrop.sass\" \"../web/static/netdrop.css\" -w"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
