--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-dropzone": "^5.1.0",
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.2.2",
@@ -20,6 +21,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
