--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions" : {
     "jsx": "react",
     "esModuleInterop": true,
-    "typeRoots": ["./js/@types", "node_modules"]
+    "typeRoots": ["./js/@types", "node_modules"],
+    "downlevelIteration": true
  }
 
 }
