--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/downloadjs": "^1.4.2",
+    "@types/highlight.js": "^10.1.0",
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
@@ -18,6 +19,7 @@
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.2.2",
     "downloadjs": "^1.4.7",
+    "highlight.js": "^11.3.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,5 +31,8 @@
     "typescript": "^4.4.3",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.0"
   }
 }
