--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "wp": "webpack -w",
-    "sass": "sass \"./css/netdrop.sass\" \"../web/static/netdrop.css\" -w"
+    "sass": "sass \"./css/netdrop.sass\" \"../web/static/netdrop.css\" -w",
+    "start": "concurrently \"npm run sass\" \"npm run wp\""
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -18,6 +19,8 @@
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.2.2",
+    "concurrently": "^7.0.0",
+    "css-loader": "^6.6.0",
     "downloadjs": "^1.4.7",
     "highlight.js": "^11.3.1",
     "jquery": "^3.6.0",
@@ -33,6 +36,7 @@
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.0"
+    "@popperjs/core": "^2.11.0",
+    "@uiw/react-textarea-code-editor": "^1.4.16"
   }
 }
